fix: allow only container owner to delete memory container (#4258)
* fix: allow only container owner to delete memory container

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>

* fix: namespace as mandatory field but without validation

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>

* fix: enabling merge update strategies instead of overwriting

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>

* address comments

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>

* fix: refactor memory index types into Enum object

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>

* fix: refuse to delete memory container and related indices when multiple containers sharing the indices

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>

* fix: change exisitng memory index types into MemoryType class

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>

* fix: support llm override per strategy

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>

* fix: add container_id filter in query constructer

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>

---------

Signed-off-by: Sicheng Song <sicheng.song@outlook.com>
Co-authored-by: Dhrubo Saha <dhrubo@amazon.com>
(cherry picked from commit 0e6ce432652e6e9e6d7ee9310c793e2dc2f78a15)